Simplify surface reconstruction notation

--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -16,7 +16,7 @@
 
 \begin{picture}(0,0)
 \put(-152,-743){\rotatebox{90}{\Large \textsc{THESE DE DOCTORAT}}} \\
-\put(-120,-743){\rotatebox{90}{NNT : 2020UPASA001}}
+\put(-120,-743){\rotatebox{90}{NNT : 2024UPASP001}}
 \end{picture}
 
 % \vspace{-12mm}
@@ -43,18 +43,18 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 \vspace{2cm}
 
 \normalsize
-\textbf{Thèse de doctorat de l'Université Paris-Saclay}
+\textbf{Thèse de doctorat de l'université Paris-Saclay}
 
 \vspace{6mm}
 
-École doctorale n$^{\circ}$ 564, physique en Île-de-France (PIF)\\
+École doctorale n$^{\circ}$ 564, Physique en Île-de-France (PIF)\\
 \small Spécialité de doctorat: Physique\\
-\small Graduate School: Physique.\\
+\small Graduate School: Physique. Référent: Faculté des sciences d’Orsay\\
 \vspace{6mm}
 
-\footnotesize Thèse préparée dans les unités de recherche \textbf{Synchrotron Soleil (Université Paris-Saclay) et CEA Grenoble}, sous la direction de \textbf{Alessandro COATI}, Dr., la co-direction de \textbf{Marie-Ingrid RICHARD}, Directrice de recherche, le co-encadrement de \textbf{Andrea RESTA}, Dr.\\
+\footnotesize Thèse préparée dans les unités de recherche \textbf{Synchrotron Soleil (Université Paris-Saclay)} et \textbf{Modélisation et Exploration des Matériaux (Université Grenoble Alpes, CEA)}, sous la direction d'\textbf{Alessandro COATI}, Docteur, la co-direction de \textbf{Marie-Ingrid RICHARD}, Directrice de recherche, et le co-encadrement de \textbf{Andrea RESTA}, Docteur\\
 \vspace{15mm}
-\textbf{Thèse présentée et soutenue à Paris-Saclay, le 12/01/2024, par}\\
+\textbf{Thèse soutenue à Paris-Saclay, le 12 janvier 2024, par}\\
 \bigskip
 \Large {\color{Prune} \textbf{David SIMONNE}}
 
@@ -70,16 +70,16 @@ Catalytic properties at the nanoscale probed by surface x-ray diffraction and co
 \scriptsize
 \begin{tabular}{|p{10cm}l}
 \arrayrulecolor{Prune}
-\textbf{Sylvain Ravy} & Président \\
-Directeur de recherche, LPS, Orsay & \\
-\textbf{Andreas Stierle} & Rapporteur \\
-Professor, University of Hamburg / DESY, Hamburg & \\
-\textbf{Thomas Cornélius} & Rapporteur \\
-Directeur de recherche, IM2NP, Marseille & \\
-\textbf{Gerardina Carbone} & Examinatrice \\
-Researcher, Lund University, Lund & \\
-\textbf{Virginie Chamard} & Examinatrice \\
-Directrice de recherche, Institut Fresnel, Marseille & \\
+\textbf{Sylvain RAVY} & Président \\
+Directeur de recherche, LPS, Université Paris-Saclay & \\
+\textbf{Andreas STIERLE} & Rapporteur \& Examinateur \\
+Professeur, University of Hamburg / DESY & \\
+\textbf{Thomas CORNELIUS} & Rapporteur \& Examinateur \\
+Directeur de recherche, IM2NP, Aix-Marseille Université & \\
+\textbf{Gerardina CARBONE} & Examinatrice \\
+Dr., Lund University & \\
+\textbf{Virginie CHAMARD} & Examinatrice \\
+Directrice de recherche, Institut Fresnel, Aix-Marseille Université & \\
 \end{tabular}
 \vspace{6mm}
 
