--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -13,7 +13,7 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
         Phenomena & Technique used & Studied samples & Information \\
         \toprule
         Scattering & Bragg Coherent & Pt particles & Shape, 3D strain \\
-        & Diffraction Imaging & (111), (110), (100), ... & and displacement \\
+        & Diffraction Imaging & \{111\}, \{110\}, \{100\}, ... & and displacement \\
         & (BCDI) & & \\
         \midrule
         Scattering & Surface x-ray & Pt single crystals & Roughness, relaxation, atomic \\
@@ -31,9 +31,9 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/gwaihir/dp_pr.png}
-    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_2227-2283_patched.pdf}
-    \includegraphics[height=0.28\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
+    \includegraphics[height=0.275\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/gwaihir/dp_pr.png}
+    \includegraphics[height=0.275\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/Map_hkl_surf_or_2227-2283_patched_slides.pdf}
+    \includegraphics[height=0.275\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
     \caption{
     Left: 2D diffraction pattern collected using BCDI at the SixS beamline (SOLEIL synchrotron)
     Middle: reciprocal space in-plane map collected using SXRD at the SixS beamline.
