--- a/Sections/2_Theory_Models/SXRD.tex
+++ b/Sections/2_Theory_Models/SXRD.tex
@@ -18,7 +18,7 @@ The aim of the technique is to obtain geometrical information of the surface at 
     \centering
     \includegraphics[width=\textwidth]{Figures/introduction/SurfaceReconstructions.pdf}
     \caption{
-    (a) Top view of the crystal surface, the last atomic layer (green) does not have the same periodicity as the bulk layers (brown), but a (2x4) periodicity.
+    (a) Top view of the crystal surface, the last atomic layer (green) does not have the same periodicity as the bulk layers (brown), but a ($2\times4$) periodicity.
     (b) HK plane in the reciprocal space, diffraction peaks are represented as small brown and green dots for the bulk and surface reconstruction, respectively. The bulk reciprocal lattice is represented in grey.
     }
     \label{fig:SurfaceReconstructions}
@@ -30,9 +30,10 @@ The origin of this phenomenon can be linked to a different environment for surfa
 
 In this example, the surface reconstructions can be described using the \textit{Wood notation}, that quantifies the relation between the surface reconstruction unit vectors ($\vec{a}_r, \vec{b}_r$) and the bulk unit vectors ($\vec{a}, \vec{b}$) \parencite{Wood1964, Unertl1996, Goncharova2018}.
 Let us take the example of fig. \ref{fig:SurfaceReconstructions}, for which the brown atoms correspond to the Pt(100) surface.
-The green reconstruction can be described as Pt(100)-p(2x4)-R\ang{0}.
+The green reconstruction can be described as Pt(100)-p($2\times4$)-R\ang{0}.
+The p and -R\ang{0}can be omitted in a simpler notation, Pt(100)-($2\times4$).
 A possible rotation of the reconstruction arrangement with respect to the bulk layer would result in a specific angular value.
-If an atom was present in the center of the \numproduct{2x4} arrangement, \textit{i.e.} at (1, 2), the notation would change and become Pt(100)-c(2x4)-R\ang{0}.
+If an atom was present in the center of the ($2\times4$) arrangement, \textit{i.e.} at (1, 2), the notation would change and become Pt(100)-c($2\times4$)-R\ang{0}.
 
 This surface reconstruction can also be described with a matrix, Pt(100)-
 $\begin{pmatrix}
