--- a/Sections/4_Results_SingleCrystals/111.tex
+++ b/Sections/4_Results_SingleCrystals/111.tex
@@ -48,7 +48,7 @@ This could be the signature of the existence of two hexagonal surface structures
 However, no apparent second order peak can be linked to those rotated hexagonal structures, the related intensity is possibly too low at high scattering vector to be detected.
 
 The matrix notation describing one of those rotated structures is Pt(111)-p$\begin{pmatrix} 1.20 & 0.00\\ 0.00 & 1.20 \end{pmatrix}$-R\ang{\pm 8.8}.
-The closest rotated superstructure is Pt(111)-p(6x6)-R\ang{\pm 8.8}.
+The closest rotated superstructure is Pt(111)-($6\times6$)-R\ang{\pm 8.8}.
 This means that in real space, the node closest to the origin where the Pt(111) and Pt(111)-p$\begin{pmatrix} 1.20 & 0.00\\ 0.00 & 1.20 \end{pmatrix}$-R\ang{\pm 8.8} lattices meet is at (6$a_{Pt_{111}}$, 6$b_{Pt_{111}}$), after rotation by \ang{\pm 8.8}.
 This notation does not describe a surface reconstruction in this case, a sketch describing the real space unit cell can be found in app. \ref{fig:Pt11180O2Structures}.
 
@@ -56,7 +56,7 @@ Interestingly, summing the two vectors going from the centre of the reciprocal s
 The angle between both vectors is then equal to \ang{42.6}, equivalent to \ang{137.4} in real space.
 No other peak linked to this unit cell can be identified in this in-plane map.
 
-% This unit cell can be described as follows: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0}, and is not commensurate.
+% This unit cell can be described as follows: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$, and is not commensurate.
 % Note that the rotation is zero even though the peaks are not in the same direction as the Pt(111) surface unit cell.
 % The new structure vectors are described by a linear combination of the Pt(111) surface unit cell vectors.
 % A sketch describing the real space unit cell can be found in app. \ref{fig:Pt11180O2Structures}.
@@ -68,23 +68,23 @@ There is approximately \qty{1}{\hour} between the measurement of the peaks circl
 A second map was measured in a smaller region of the reciprocal space \qty{9}{\hour}\qty{30}{\minute} after the introduction of oxygen in the cell, to see if the intensity and position of the newly found peaks changed (fig. \ref{fig:MapsPt111A} - d).
 The measurement of this map took about \qty{1}{\hour}\qty{15}{\minute}.
 Three additional peaks (circled in black in fig. \ref{fig:MapsPt111A} - d) appeared describing an epitaxied hexagonal lattice of parameter equal to $|\vec{a_{hex}}| = \qty{3.10}{\angstrom}$ (drawn in black dashed lines in fig. \ref{fig:MapsPt111A} - d).
-This relation can also be described as follows : Pt(111)-p$\begin{pmatrix} 1.116 & 0 \\ 0 & 1.116 \end{pmatrix}$-R\ang{0}.
+This relation can also be described as follows : Pt(111)-p$\begin{pmatrix} 1.116 & 0 \\ 0 & 1.116 \end{pmatrix}$.
 The average position of the three peaks with respect to the reciprocal space lattice nodes was used to determine the matrix.
-The closest commensurate superstructure is Pt(111)-p(26x26)-R\ang{0}, a sketch describing the real space unit cell can be found in app. \ref{fig:Pt111AlphaPtO2}.
+The closest commensurate superstructure is Pt(111)-($26\times26$), a sketch describing the real space unit cell can be found in app. \ref{fig:Pt111AlphaPtO2}.
 % The unit cell of this structure is in the same direction as the Pt(111) surface unit cell.
 
 The grey and purple circled peaks seem to have disappeared from the reciprocal map (fig. \ref{fig:MapsPt111A}, c, d), but an additional peak circled in red is revealed at \ang{120} from the other peak circled in red, and at \ang{60} from the peak circled in purple, at the same distance from the centre (fig. \ref{fig:MapsPt111A} - d).
 From these measurements, a first hypothesis to explain the observed peaks position is given.
-First, two rotated hexagonal structures Pt(111)-p(6x6)-R\ang{\pm 8.8} appear (fig. \ref{fig:MapsPt111A} - c).
-Secondly, a Pt(111)-p(26x26)-R\ang{0} structure is observed, its second order peaks already detected while measuring the large reciprocal space in-plane map (black peak in fig. \ref{fig:MapsPt111A} - c), while the first order peaks can only be identified in the second reciprocal space map (fig. \ref{fig:MapsPt111A} - d).
+First, two rotated hexagonal structures Pt(111)-($6\times6$)-R\ang{\pm 8.8} appear (fig. \ref{fig:MapsPt111A} - c).
+Secondly, a Pt(111)-($26\times26$) structure is observed, its second order peaks already detected while measuring the large reciprocal space in-plane map (black peak in fig. \ref{fig:MapsPt111A} - c), while the first order peaks can only be identified in the second reciprocal space map (fig. \ref{fig:MapsPt111A} - d).
 It is possible that the disappearance of the grey and purple circled peaks is linked to some alignment problems, visible from the large low intensity region in fig. \ref{fig:MapsPt111A} (d).
-Otherwise, those peaks may disappear after the growth of the Pt(111)-p(26x26)-R\ang{0} structure.
+Otherwise, those peaks may disappear after the growth of the Pt(111)-($26\times26$) structure.
 It is not clear however why the remaining peaks are at \ang{120} of each other, in contradiction with the hypothesis of different hexagonal structures on the Pt(111) surface.
 
-Super-structure rods (SSRs) were collected on the peaks belonging to the Pt(111)-p(26x26)-R\ang{0} structure, [H, K] = [0.89, 0] (fig. \ref{fig:LScans80} - a), and to the rotated hexagonal structures, [H, K] = [0.15, 0.74] (fig. \ref{fig:LScans80} - b), to probe their out-of-plane structures.
-A second SSR was performed at [H, K] = [1.78, 0] to probe the intensity of a potential second-order peak associated to the Pt(111)-p(26x26)-R\ang{0} structure (fig. \ref{fig:LScans80} - c), approximately \qty{10}{\hour} after the measurement at [H, K] = [0.89, 0].
+Super-structure rods (SSRs) were collected on the peaks belonging to the Pt(111)-($26\times26$) structure, [H, K] = [0.89, 0] (fig. \ref{fig:LScans80} - a), and to the rotated hexagonal structures, [H, K] = [0.15, 0.74] (fig. \ref{fig:LScans80} - b), to probe their out-of-plane structures.
+A second SSR was performed at [H, K] = [1.78, 0] to probe the intensity of a potential second-order peak associated to the Pt(111)-($26\times26$) structure (fig. \ref{fig:LScans80} - c), approximately \qty{10}{\hour} after the measurement at [H, K] = [0.89, 0].
 
-Interestingly, the position of the two peaks in [H, K] (visible in fig. \ref{fig:LScans80}, a-c) leads to a new definition of the structure since the closest commensurate superstructure is now Pt(111)-p(8x8)-R\ang{0}, with a lattice parameter equal to \qty{3.12}{\angstrom}.
+Interestingly, the position of the two peaks in [H, K] (visible in fig. \ref{fig:LScans80}, a-c) leads to a new definition of the structure since the closest commensurate superstructure is now Pt(111)-($8\times8$), with a lattice parameter equal to \qty{3.12}{\angstrom}.
 It is possible that the elapsed time under oxidising atmosphere has had an effect of the 2D structure, that has become more relaxed.
 The background-subtracted scattered intensity was integrated as a function of $L$ using the \textit{fitaid} module of \textit{BINoculars} (fig. \ref{fig:LScans80}).
 
@@ -132,12 +132,12 @@ The corresponding experimental structures are described in tab. \ref{tab:PtOxide
 \label{tab:PtOxides}
 \end{table}
 
-The intensity distribution along $L$ for Pt(111)-p(8x8)-R\ang{0} (fig. \ref{fig:LScans80}) suggests the presence of a multi-layer structure, possibly not even reaching the full unit cell (see simulated oxides structure in fig. \ref{fig:SimROD} - a).
+The intensity distribution along $L$ for Pt(111)-($8\times8$) (fig. \ref{fig:LScans80}) suggests the presence of a multi-layer structure, possibly not even reaching the full unit cell (see simulated oxides structure in fig. \ref{fig:SimROD} - a).
 Seriani et al. \parencite*{Seriani2006} have determined that the most stable surface oxide on the Pt(111) surface is hexagonal $\alpha$-\ce{PtO_2}.
 A high uncertainty regarding the lattice parameter in the $\vec{c}$ direction is reported in experimental and theoretically studies due to a poor crystallisation of the bulk oxide \parencite{Muller1968}, and to underestimation of weak interlayer Van der Waals forces in theoretical studies \parencite{Li2005}.
 
 The formation of hexagonal on hexagonal surface $\alpha$-\ce{PtO_2} on Pt(111) is expected to induce a high amount of in-plane compressive strain in the oxide layer, from the large difference between the Pt-Pt distance on the (111) surface (\qty{2.77}{\angstrom}) and the in-plane lattice parameter of $\alpha$-\ce{PtO_2} (\qty{3.14}{\angstrom}).
-A rotation of \ang{30} is expected to reduce the in-plane strain, resulting in a (2x2) arrangement, no such structure was observed in this experiment on Pt(111).
+A rotation of \ang{30} is expected to reduce the in-plane strain, resulting in a ($2\times2$) arrangement, no such structure was observed in this experiment on Pt(111).
 The presence of $\alpha$-\ce{PtO_2} on the Pt(111) surface was also shown to provide favourable special sites that could contribute to the catalytic activity \parencite{Li2005}.
 The unit cell of $\alpha$-PtO$_2$ is presented in fig. \ref{fig:AlphaPtO2}.
 
@@ -153,7 +153,7 @@ The unit cell of $\alpha$-PtO$_2$ is presented in fig. \ref{fig:AlphaPtO2}.
 
 Ellinger et al. \parencite*{Ellinger2008} reported the existence of surface $\alpha$-\ce{PtO_2} on Pt(111) using SXRD at \qty{500}{\milli\bar} of oxygen, and at a temperature between \qty{245}{\degreeCelsius} and \qty{635}{\degreeCelsius}.
 The in-plane lattice parameter is equal to \qty{3.15}{\angstrom}, close to the reported bulk value of $\alpha$-PtO$_2$ (tab. \ref{tab:PtOxides}, \qty{3.14}{\angstrom}).
-Similarly to the current experiment, a Pt(111)-p(8x8)-R\ang{0} superstructure is reported, linked to surface $\alpha$-\ce{PtO_2},  also previously reported by Ackermann \parencite*{Ackermann2007}.
+Similarly to the current experiment, a Pt(111)-($8\times8$) superstructure is reported, linked to surface $\alpha$-\ce{PtO_2},  also previously reported by Ackermann \parencite*{Ackermann2007}.
 Ellinger et al. \parencite*{Ellinger2008} proposed a model for surface $\alpha$-\ce{PtO_2} consisting of a full unit cell, with an out-of-plane lattice parameter reduced by \qty{15}{\percent} in comparison with the bulk structure (\qty{3.62}{\angstrom}).
 They introduced a displacement of \qty{\approx33}{\percent} of the platinum atoms on the top layers with respect to those of the bottom layer, in the ($\vec{a}_{\alpha-\ce{PtO_2}}$ + $\vec{b}_{\alpha-\ce{PtO_2}}$) direction (fig. \ref{fig:AlphaPtO2}) .
 % The question of the epitaxial relation between both structures remains, since the proposed structure does come with a large misfit strain (\qty{13.5}{\percent}) when in a hexagonal on hexagonal arrangement.
@@ -181,7 +181,7 @@ XPS studies have also reported $\alpha$-\ce{PtO_2} above \qty{6.66}{\milli\bar} 
 As mentioned by Fantauzzi et al \parencite*{Fantauzzi2017}, the extended exposure to oxygen necessary to grow the oxide structure makes its characterisation difficult, the structure possibly evolving with time.
 
 Additional simulations are needed to fully understand the structures in this study using the proposed distorted $\alpha$-\ce{PtO_2} structure, but also different surface models including the \textit{spoked-wheel} superstructure identified \textit{via} scanning tunnelling microscopy (STM) by Van Spronsen et al \parencite*{VanSpronsen2017} and Boden et al. \parencite*{Boden2022}.
-This structure, identified above \qty{1}{\bar} of oxygen, and at approximately \qty{200}{\degreeCelsius}, also exhibits a (8x8) coincidence with the Pt(111) lattice.
+This structure, identified above \qty{1}{\bar} of oxygen, and at approximately \qty{200}{\degreeCelsius}, also exhibits a ($8\times8$) coincidence with the Pt(111) lattice.
 
 \begin{figure}[!htb]
     \centering
@@ -215,7 +215,7 @@ The lateral information is lost during reflectivity measurements, meaning that d
 % A model with two layers in the fitting routine did not improve the final results.
 
 By combining the information obtained from in-plane, SSRs and reflectivity measurements, it is probable that the platinum surface is first covered by two types of domains corresponding to two rotated hexagonal structures.
-Secondly, a Pt(111)-p(8x8)-R\ang{0} structure is identified on the surface.
+Secondly, a Pt(111)-($8\times8$) structure is identified on the surface.
 The layer thickness retrieved with reflectivity can indicate that a thin film is present on the surface, but no corresponding structure was yet identified with SXRD, which rather supports the existence of hexagonal monolayers, with a multi-layer thick epitaxied structure.
 Future work will help identify the out-of-plane catalyst structure.
 
@@ -286,25 +286,25 @@ Some peaks start to split in a similar pattern, exhibiting three distinct signal
 The grey circled peak becomes fully visible after \qty{4}{\hour} of measurement.
 
 This splitting of the peaks can be interpreted as the signature of a Pt(111) surface covered by different domains exhibiting similar hexagonal structures.
-These domains are rotated by \ang{\pm 8.8} with respect to the Pt(111) surface unit cell, with a higher magnitude of the in-plane lattice parameter, following the same Pt(111)-p(6x6)-\ang{\pm8.8} structures observed under an oxygen pressure of \qty{80}{\milli\bar} (fig. \ref{fig:MapsPt111A} - c).
+These domains are rotated by \ang{\pm 8.8} with respect to the Pt(111) surface unit cell, with a higher magnitude of the in-plane lattice parameter, following the same Pt(111)-($6\times6$)-\ang{\pm8.8} structures observed under an oxygen pressure of \qty{80}{\milli\bar} (fig. \ref{fig:MapsPt111A} - c).
 No second order peak corresponding to these structures was observed.
 
 A peak can be observed at [H, K] = [0.89, 0.89] in the large reciprocal space in-plane map collected between \qty{41}{\minute} and \qty{4}{\hour}\qty{3}{\minute} after the start of the condition (circled in black in fig. \ref{fig:LargeMapsPt111LowOxygen} - b).
 The peak position is the same as in the first large reciprocal space in-plane map measured under \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt111A} - c, tab. \ref{tab:InterplanarSpacingsPt111Oxygen}).
-The position of this signal also corresponds to the Pt(111)-p(8x8)-R\ang{0} superstructure on Pt(111).
+The position of this signal also corresponds to the Pt(111)-($8\times8$) superstructure on Pt(111).
 However, no peaks at [0.89, 0, 0] and [0, 0.89, 0] can yet be detected, before (fig. \ref{fig:MapsPt111A} - b), and after (fig. \ref{fig:MapsPt111A} - c) measuring this signal.
 Such peaks are only detected in the large maps after \qty{\approx 24}{\hour} of measurements, (described by the hexagonal lattice drawn with black dashed lines in fig. \ref{fig:MapsPt111A} - f).
 
 As mentioned before, it is possible to draw a surface unit cell in fig. \ref{fig:MapsPt111A} (b) that includes the peak at [0.89, 0.89] together with the white and purple circled peaks, but with an in-plane angle $\gamma^*$ equal in this case to \ang{42.2}.
-% This has been described with the Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} matrix notation.
+% This has been described with the Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$ matrix notation.
 
 The area sampled during the measurement was extended in the last two maps to observe more signals around the ($\bar{1}10$) region (fig. \ref{fig:LargeMapsPt111LowOxygen} - e, f).
-For each map, the purple and red circled peaks around the Pt(111)-p(8x8)-R\ang{0} peaks are separated by \ang{60}, likewise for the grey and white circled peaks.
+For each map, the purple and red circled peaks around the Pt(111)-($8\times8$) peaks are separated by \ang{60}, likewise for the grey and white circled peaks.
 In the last two map, four doublet of peaks are visible, all peaks are split in a similar pattern.
 
 During this set of measurement, the grey circled peak did not disappear in contrast with the measurements carried out under \qty{80}{\milli\bar} of oxygen, which furthermore supports the existence of two rotated hexagonal structures.
 One linked to the red and purple peaks, while the other one is linked to the grey and white peaks.
-Overall, it seems that both structures appear after introducing oxygen and the cell, and coexist with the Pt(111)-p(8x8)-R\ang{0} structure.
+Overall, it seems that both structures appear after introducing oxygen and the cell, and coexist with the Pt(111)-($8\times8$) structure.
 
 \begin{figure}[!htb]
     \centering
@@ -315,43 +315,43 @@ Overall, it seems that both structures appear after introducing oxygen and the c
     \label{fig:SmallMapsPt111LowOxygen}
 \end{figure}
 
-Smaller maps taken with a shorter time interval are presented in fig. \ref{fig:SmallMapsPt111LowOxygen}, in which a Pt(111)-p(8x8)-R\ang{0} peak is detected after \qty{\approx 23}{\hour} of measurements (circled in black).
+Smaller maps taken with a shorter time interval are presented in fig. \ref{fig:SmallMapsPt111LowOxygen}, in which a Pt(111)-($8\times8$) peak is detected after \qty{\approx 23}{\hour} of measurements (circled in black).
 The same peak was already detected after \qty{13}{hour} under \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt111A} - d), highlighting the importance of the oxygen pressure in the surface oxidation.
 
-A more quantitative analysis of the different structures appearing during the exposition to oxygen was performed by integrating the scattered intensity around the Pt(111)-p(8x8)-R\ang{0} and two Pt(111)-p(6x6)-R\ang{\pm8.8} signals present in the (100) region (respectively circled in black, red and white in fig. \ref{fig:SmallMapsPt111LowOxygen}).
+A more quantitative analysis of the different structures appearing during the exposition to oxygen was performed by integrating the scattered intensity around the Pt(111)-($8\times8$) and two Pt(111)-($6\times6$)-R\ang{\pm8.8} signals present in the (100) region (respectively circled in black, red and white in fig. \ref{fig:SmallMapsPt111LowOxygen}).
 The average background was subtracted to each reciprocal space voxel before integration.
 %, while the intensity of the crystal truncation rod ($\bar{1}$10) Bragg peak was used for normalisation to correct possible miss-alignement effects on the integrated intensity.
 The starting time of each reciprocal space in-plane map is used as estimate for the time since the introduction of oxygen, the evolution of each peak is presented in fig. \ref{fig:HexBraggPeaks}.
-The growth of the Pt(111)-p(8x8)-R\ang{0} peak at [H, K] = [0, 0.89] follows an exponential increase after \qty{23}{\hour} of exposition.
+The growth of the Pt(111)-($8\times8$) peak at [H, K] = [0, 0.89] follows an exponential increase after \qty{23}{\hour} of exposition.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/intensity_comparison_hex_reconstructions.pdf}
     \caption{
-        Intensity evolution as a function of time since introduction of \qty{5}{\milli\bar} of oxygen for peaks corresponding to the Pt(111)-p(6x6)-R\ang{\pm8.8} and Pt(111)-p(8x8)-R\ang{0} structures.
+        Intensity evolution as a function of time since introduction of \qty{5}{\milli\bar} of oxygen for peaks corresponding to the Pt(111)-($6\times6$)-R\ang{\pm8.8} and Pt(111)-($8\times8$) structures.
     }
     \label{fig:HexBraggPeaks}
 \end{figure}
 
-The white Pt(111)-p(6x6)-R\ang{\pm8.8} peak is visible from the start of the exposition to oxygen (fig. \ref{fig:SmallMapsPt111LowOxygen} - a), whereas the red Pt(111)-p(6x6)-R\ang{\pm8.8} peak is only clearly visible after \qty{7}{\hour} (fig. \ref{fig:SmallMapsPt111LowOxygen} - c), with a lower intensity.
-Both peaks intensity quickly increases in the first hours of oxygen exposure, and then reach a steady state between \qtylist{8;23}{\hour}, increasing again together with the appearance of the Pt(111)-p(8x8)-R\ang{0} signal.
-The Pt(111)-p(6x6)-R\ang{\pm8.8} peak intensity then starts to decreases after \qty{\approx 25}{\hour}.
+The white Pt(111)-($6\times6$)-R\ang{\pm8.8} peak is visible from the start of the exposition to oxygen (fig. \ref{fig:SmallMapsPt111LowOxygen} - a), whereas the red Pt(111)-($6\times6$)-R\ang{\pm8.8} peak is only clearly visible after \qty{7}{\hour} (fig. \ref{fig:SmallMapsPt111LowOxygen} - c), with a lower intensity.
+Both peaks intensity quickly increases in the first hours of oxygen exposure, and then reach a steady state between \qtylist{8;23}{\hour}, increasing again together with the appearance of the Pt(111)-($8\times8$) signal.
+The Pt(111)-($6\times6$)-R\ang{\pm8.8} peak intensity then starts to decreases after \qty{\approx 25}{\hour}.
 
-Several SSRs have been measured at the positions of the Pt(111)-p(6x6)-R\ang{\pm8.8} peaks, presented in app. \ref{fig:LScans05}.
+Several SSRs have been measured at the positions of the Pt(111)-($6\times6$)-R\ang{\pm8.8} peaks, presented in app. \ref{fig:LScans05}.
 The intensity is constant as a function of $L$, similarly to the SSRs presented in fig. \ref{fig:LScans80}, which shows that the rotated hexagonal structures are flat monolayers on the Pt(111) surface.
-No SSR was measured at the position of the Pt(111)-p(8x8)-R\ang{0} peak.
+No SSR was measured at the position of the Pt(111)-($8\times8$) peak.
 
 Lowering the oxygen partial pressure in the reactor cell from \qtyrange{80}{5}{\milli\bar} has demonstrated that similar in-plane structures appear, but with a slower growth rate.
 All peaks are absent in the simultaneous presence of oxygen and ammonia in the reactor.
-Additional studies are needed to understand if whether or not the rotated hexagonal structures act only as precursors for the Pt(111)-p(8x8)-R\ang{0} superstructure, or if those peaks are still present after an extended exposure to oxygen.
+Additional studies are needed to understand if whether or not the rotated hexagonal structures act only as precursors for the Pt(111)-($8\times8$) superstructure, or if those peaks are still present after an extended exposure to oxygen.
 This structure could correspond to the oxide stripe hypothesised to be a precursor for surface $\alpha$-\ce{PtO_2} oxide on Pt(111) by Hawkins et al. \parencite*{Hawkins2009}.
 
 Finally, reflectivity curves were measured just before the introduction of oxygen (in blue), \qty{14}{\hour} (orange) and \qty{23}{\hour} (green) after the introduction of oxygen, shown in fig. \ref{fig:Reflecto5}.
-The last reflectivity curve was measured just before the detection of the Pt(111)-(8x8)-R\ang{0} structure with SXRD (fig. \ref{fig:SmallMapsPt111LowOxygen} - f).
+The last reflectivity curve was measured just before the detection of the Pt(111)-($8\times8$) structure with SXRD (fig. \ref{fig:SmallMapsPt111LowOxygen} - f).
 The curves were fitted with \textit{GenX}.
 Following the information gathered by SXRD, a homogeneous layer on top of Pt(111) was introduced in the model for the orange and green measurements, to represent the rotated structures visible in fig. \ref{fig:SmallMapsPt111LowOxygen}.
 The oxide layer was necessary for the green curve to achieve a good fit, but only slightly improved the result for the orange curve.
-The layer thickness and density are difficult to estimate since no oscillations are visible, which shows that those measured under \qty{80}{\milli\bar} or oxygen in fig. \ref{fig:Reflecto80} are linked to the Pt(111)-(8x8)-R\ang{0} structure.
+The layer thickness and density are difficult to estimate since no oscillations are visible, which shows that those measured under \qty{80}{\milli\bar} or oxygen in fig. \ref{fig:Reflecto80} are linked to the Pt(111)-($8\times8$) structure.
 This also further confirms that the red and white peaks are linked to thin layers, as observed in the SSRs in app. \ref{fig:LScans05}.
 A transition in terms of oxide roughness and density is observed between the orange and green curves.
 Interestingly, the final density is equal to that retrieved under \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:Reflecto80}), but without the same layer thickness, and roughness.
@@ -514,16 +514,16 @@ Peuckert et al. \parencite*{Peuckert1984} have studied various oxidised Pt surfa
 Derry et al. \parencite*{Derry1984} report \qty{530.8}{\eV} for \ce{O_{a}} on Pt(111) during its exposition to oxygen, while Zhu et al. \parencite*{Zhu2003} report \ce{O_{a}} at \qty{529.9}{\eV} when probing the dissociation of \ce{NO} on the Pt(111) surface.
 Fantauzzi et al. \parencite*{Fantauzzi2017} report oxygen surface species at \qty{529.7}{\eV} during the oxidation of Pt(111) at \qty{225}{\degreeCelsius}, similarly to Miller et al. \parencite*{Miller2014}.
 
-During a recent study of the oxidation of ammonia at different pressures and \ce{O_2}/\ce{NH_3} ratio on Pt(111), (2x2) chemisorbed oxygen and hydroxyl groups were reported respectively at \qty{529.7}{\eV} and \qty{531.4}{\eV} in \qty{1}{\milli\bar} of oxygen at \qty{325}{\degreeCelsius} \parencite{Ivashenko2021}.
+During a recent study of the oxidation of ammonia at different pressures and \ce{O_2}/\ce{NH_3} ratio on Pt(111), ($2\times2$) chemisorbed oxygen and hydroxyl groups were reported respectively at \qty{529.7}{\eV} and \qty{531.4}{\eV} in \qty{1}{\milli\bar} of oxygen at \qty{325}{\degreeCelsius} \parencite{Ivashenko2021}.
 
 In the current XPS study, the signal to noise ratio does not allow to clearly discern and locate peaks between \qtylist{528.5;533}{\eV}.
 It is probable however that hydroxyl groups as well as atomic oxygen are adsorbed on the surface around \qty{529.7}{\eV} and \qty{531.4}{\eV} respectively.
 Such O 1s features can be seen when the oxygen pressure is equal to \qty{0.55}{\milli\bar}, but with a higher apparent amount of atomic oxygen species in comparison to hydroxyl groups.
 
-From the previous SXRD measurements, it was seen that a Pt(111)-(8x8)-R\ang{0} superstructure grows under the presence of \qty{5}{\milli\bar} of oxygen, but only after at least \qty{22}{\hour}.
+From the previous SXRD measurements, it was seen that a Pt(111)-($8\times8$) superstructure grows under the presence of \qty{5}{\milli\bar} of oxygen, but only after at least \qty{22}{\hour}.
 Similar structures have been linked to a surface $\alpha$-\ce{PtO_2} oxide \parencite{Ackermann2007, Ellinger2008}.
-Two Pt(111)-(6x6)-R\ang{\pm8.8} structures, possibly precursors of the Pt(111)-(8x8)-R\ang{0} structure, have been measured in the minutes following the introduction of oxygen.
-Therefore, if the Pt(111)-(8x8)-R\ang{0} structure is not expected here since the duration of each condition is below \qty{5}{\hour}, the precursor structure may yield some signals between \qtylist{528.5;533}{\eV} in the O 1s level.
+Two Pt(111)-($6\times6$)-R\ang{\pm8.8} structures, possibly precursors of the Pt(111)-($8\times8$) structure, have been measured in the minutes following the introduction of oxygen.
+Therefore, if the Pt(111)-($8\times8$) structure is not expected here since the duration of each condition is below \qty{5}{\hour}, the precursor structure may yield some signals between \qtylist{528.5;533}{\eV} in the O 1s level.
 For example, a large peak at \qty{530.7}{\eV} attributed to Pt surface oxides has been observed at an oxygen pressure of \qty{1}{\bar} by Van Spronsen et al. \parencite{VanSpronsen2017}.
 
 \begin{figure}[!htb]
@@ -648,7 +648,7 @@ Miller et al. \parencite*{Miller2011} have measured two peaks at \qtylist{72.1;7
 The \qty{72.1}{\eV} peak is assigned to (i) oxygen between the metallic surface and surface $\alpha$-\ce{PtO_2} oxide as reported by Ellinger et al. \parencite*{Ellinger2008}.
 The \qty{73.5}{\eV} peak is attributed to (ii) Pt atoms within the trilayer oxide structure.
 
-However, both peaks are absent at \qty{0.66}{\milli\bar} of oxygen at \qty{350}{\degreeCelsius}, for which the presence of (iii) p(2x2) chemisorbed oxygen and (iv) "4O" oxide surface stripes are linked to two other peaks, respectively \qty{71.1}{\eV}, and \num{71.6}-\qty{71.7}{\eV}.
+However, both peaks are absent at \qty{0.66}{\milli\bar} of oxygen at \qty{350}{\degreeCelsius}, for which the presence of (iii) ($2\times2$) chemisorbed oxygen and (iv) "4O" oxide surface stripes are linked to two other peaks, respectively \qty{71.1}{\eV}, and \num{71.6}-\qty{71.7}{\eV}.
 
 In a following study under \qty{13.33}{\milli\bar} of oxygen, slightly shifted high intensity peaks at \qty{72.2}{\eV} and \qty{73.6}{\eV} are linked to the presence of surface $\alpha$-\ce{PtO_2} oxide, fully covering a Pt(111) crystal \parencite{Miller2014}.
 The photon energy for both experiments is equal to \qty{275}{\eV}, whereas the photon energy is here equal to \qty{550}{\eV}.
