--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -4,17 +4,17 @@
 % oxides Pt(111)
 In this chapter was presented the structural and chemical evolution of Pt(111) and Pt(100) single crystals during ammonia oxidation.
 The pre-oxidation of the platinum surfaces under \qty{80}{\milli\bar} of oxygen has allowed the identification of different surface structures and reconstructions.
-For Pt(111), a Pt(111)-p(8x8)-R\ang{0} superstructure was measured (fig. \ref{fig:MapsPt111A} - d), preceded by two Pt(111)-p(6x6)-R\ang{\pm 8.8} superstructures (no visible second order peak, fig. \ref{fig:MapsPt111A} - c).
-% Some of the peaks belonging to the rotated structures can also be described with the following matrix notation: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0}, effectively describing a unit cell with a second order peak (fig. \ref{fig:MapsPt111A} - c).
+For Pt(111), a Pt(111)-($8\times8$) superstructure was measured (fig. \ref{fig:MapsPt111A} - d), preceded by two Pt(111)-($6\times6$)-R\ang{\pm 8.8} superstructures (no visible second order peak, fig. \ref{fig:MapsPt111A} - c).
+% Some of the peaks belonging to the rotated structures can also be described with the following matrix notation: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$, effectively describing a unit cell with a second order peak (fig. \ref{fig:MapsPt111A} - c).
 Out-of-plane measurements have revealed a multi-layer thick structure (fig. \ref{fig:LScans80}), possibly corresponding to a $\alpha$-\ce{PtO_2} surface oxide.
-The Pt(111)-p(6x6)-R\ang{\pm 8.8} structures have been linked to monolayers (fig. \ref{fig:LScans80} - app. \ref{fig:LScans05}).
+The Pt(111)-($6\times6$)-R\ang{\pm 8.8} structures have been linked to monolayers (fig. \ref{fig:LScans80} - app. \ref{fig:LScans05}).
 The complete understanding of the out-of-plane structures will be the subject of additional work.
-A precursor relation was hypothesised between the Pt(111)-p(6x6)-R\ang{\pm 8.8} and Pt(111)-p(8x8)-R\ang{0} structures by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
+A precursor relation was hypothesised between the Pt(111)-($6\times6$)-R\ang{\pm 8.8} and Pt(111)-($8\times8$) structures by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
 The importance of the partial pressure of oxygen in the growth kinetics has also been highlighted.
 
 % oxides Pt(100)
 On Pt(100), a bulk \ce{Pt_3O_4} oxide was identified during exposure to \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100A} - b, fig. \ref{fig:FitPt100LScans}), but not under \qty{5}{\milli\bar} (fig. \ref{fig:MapsPt100D}), which shows the importance of the total pressure on the growth of \ce{Pt_3O_4}.
-\ce{Pt_3O_4} follows a Pt(100)-p(2x2)-R\ang{0} epitaxial relationship with the Pt(100) surface (fig. \ref{fig:Pt3O4onPt100}).
+\ce{Pt_3O_4} follows a Pt(100)-($2\times2$) epitaxial relationship with the Pt(100) surface (fig. \ref{fig:Pt3O4onPt100}).
 A second family of peaks was measured under high oxygen pressure (fig. \ref{fig:MapsPt100A} - b), slightly shifted in H or K with respect to the \ce{Pt_3O_4} peaks measured at $L=0$.
 The shift was determined to depend on the elapsed time under oxygen atmosphere, two values were measured, $\delta_{H,K}=0.07$ and $\delta_{H,K}=0.09$, respectively after \qty{3}{\hour} (fig. \ref{fig:MapsPt100A} - b) and \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b) of measurement.
 No clear unit cell could be associated to the shifted peaks, the related out-of-plane signal is compatible with the existence of a monolayer on the Pt(100) surface (fig. \ref{fig:LScansHighOxygenPt100}).
@@ -32,8 +32,8 @@ The XPS experiment was conducted at similar oxygen to ammonia partial pressure r
 The highest oxygen pressure reached during the XPS experiment is \qty{8.8}{\milli\bar}, in the same order of magnitude as the low oxygen pressure condition for SXRD (\qty{5}{\milli\bar}).
 Adsorbed oxygen was identified by XPS on both surfaces during this condition (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}), as well as under reduced oxygen pressure (\qty{0.55}{\milli\bar}).
 The normalised intensity of the related peaks is approximately three times higher on the Pt(100) surface compared to the Pt(111) surface, which shows that the Pt(100) surface is more easily oxidised than the Pt(111) surface.
-The duration of the high oxygen condition of Pt(111) was not long enough to enable the growth of the Pt(111)-(8x8)-R\ang{0} structure if dynamics at \qty{8.8}{\milli\bar} can be translated to \qty{5}{\milli\bar} (\qty{23}{\hour} vs. \qty{5}{\hour}).
-Therefore, only the Pt(111)-(6x6)-R\ang{\pm 8.8} structure is expected to yield an additional peak in the O 1s and Pt 4f levels.
+The duration of the high oxygen condition of Pt(111) was not long enough to enable the growth of the Pt(111)-($8\times8$) structure if dynamics at \qty{8.8}{\milli\bar} can be translated to \qty{5}{\milli\bar} (\qty{23}{\hour} vs. \qty{5}{\hour}).
+Therefore, only the Pt(111)-($6\times6$)-R\ang{\pm 8.8} structure is expected to yield an additional peak in the O 1s and Pt 4f levels.
 A signal was effectively identified in the Pt 4f level at \qty{71.6}{\eV}, but with low intensity (fig. \ref{fig:Pt4fPt111}).
 Interestingly, two more peaks are identified in the O 1s level on Pt(100) at low oxygen pressure (\qty{0.55}{\milli\bar}) in addition to the \ce{O_a} signal, which could be linked to the transient structures measured with SXRD under \qty{5}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100D}).
 % Two peaks was also measured in the Pt 4f level at \qty{71.8}{\eV} (fig. \ref{fig:Pt4fPt100}).
@@ -48,18 +48,18 @@ Only adsorbed water was measured during the oxidation of ammonia in the O 1s lev
 In contrast with Pt(111), reacting conditions were found to be linked with the appearance of surface reconstructions on Pt(100), depending on the oxygen exposure time.
 After oxygen exposure for approximately \qty{17}{\hour}, the introduction of ammonia was linked to the removal of the shifted peaks near \ce{Pt_3O_4} signals (fig. \ref{fig:MapsPt100B} - a).
 Both \ce{Pt_3O_4} and shifted signals could again be measured during a second exposure of the cleaned sample to oxygen for approximately \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b).
-The following introduction of ammonia was seen to induce signals compatible with Pt(100)-p(10x10)-R\ang{0} surface reconstructions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a).
-Some periodicity can be observed in the related out-of-plane signals at [H, K] = [0, -1.2] and [H, K] = [0.5, -1], high intensity peaks are observed at $L=1$ and $L=2$ for the measurement at [H, K] = [1.9, 0] (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - b), which can link the Pt(100)-p(10x10)-R\ang{0} surface reconstructions with the presence of multilayers.
+The following introduction of ammonia was seen to induce signals compatible with Pt(100)-($10\times10$) surface reconstructions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a).
+Some periodicity can be observed in the related out-of-plane signals at [H, K] = [0, -1.2] and [H, K] = [0.5, -1], high intensity peaks are observed at $L=1$ and $L=2$ for the measurement at [H, K] = [1.9, 0] (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - b), which can link the Pt(100)-($10\times10$) surface reconstructions with the presence of multilayers.
 Additional in-plane signals are observed in fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} (a), shifted by the same amount $\delta_{H, K}=0.09$ as the signals present under high oxygen atmosphere (fig. \ref{fig:MapsPt100B} - b).
 The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5, -0.91] (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - b), decreasing with $L$, and thus showing no out-of-plane periodicity.
 
 %%%%%%%%%%%%%%%%%%%% o2/nh3=0.5 %%%%%%%%%%%%%%%%%%%%
 
-Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has removed the Pt(100)-p(10x10)-R\ang{0} surface reconstructions, and induced the appearance of a hexagonal Pt(100)-Hex superstructure, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
+Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has removed the Pt(100)-($10\times10$) surface reconstructions, and induced the appearance of a hexagonal Pt(100)-Hex superstructure, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
 Removing oxygen from the reactor resulted in the progressive removal of the hexagonal structures (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reagents.
 Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the visible presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
 No adsorbed nitrogen specie was identified when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} in the N 1s level  (fig. \ref{fig:O1sN1sPt100}).
-Therefore, the Pt(100)-p(10x10)-R\ang{0} surface reconstruction can be linked to the presence of a surface oxide on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
+Therefore, the Pt(100)-($10\times10$) surface reconstruction can be linked to the presence of a surface oxide on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanism.
 Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is three times more important than for Pt(111) (fig. \ref{fig:RGA450Pt111AndPt100}), which highlights the importance of oxygen adsorbed on the catalyst surface to facilitate the production of \ce{NO}.
 
 \begin{figure}[!htb]
@@ -83,7 +83,7 @@ The roughness on the Pt(111) surface decreases during ammonia oxidation (fig. \r
 Indeed, low roughness is already achieved when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - a).
 For Pt(100), reacting conditions can also be associated to a decreasing roughness following pure oxygen atmosphere (fig. \ref{fig:CTRFit100} - a).
 However, the minimal roughness is only reached once oxygen is completely removed from the reactor, \textit{i.e.} after the oxidation cycle.
-The  Pt(100)-p(10x10)-R\ang{0} surface reconstructions and Pt(100)-Hex hexagonal structures present on the Pt(100) surface during reacting conditions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), can be linked to the remaining high roughness, whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
+The  Pt(100)-($10\times10$) surface reconstructions and Pt(100)-Hex hexagonal structures present on the Pt(100) surface during reacting conditions (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), can be linked to the remaining high roughness, whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
 
 % surface strain
 A similar behaviour is observed for the out-of-plane lattice strain.
@@ -99,7 +99,7 @@ If the oxygen pressure is seen to decrease directly after the change of conditio
 It is possible that this progressive removal of the hexagonal surface structure is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the absence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
 The largest transition in terms of surface strain is also during this change of condition for Pt(100), as the topmost layer goes from important compressive strain to almost bulk atomic positions for the Pt atoms (fig. \ref{fig:CTRFit100} - b, difference of \qty{\approx 0.33}{\percent}).
 Atomic nitrogen is also observed in the N 1s level of Pt(111), but together with other nitrogen species (fig. \ref{fig:O1sN1sPt111} - \ref{fig:Pt4fPt111}), possibly impinging on its long-range ordering.
-No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between the Pt(111)-(8x8)-R\ang{0} surface structure, and changes in the out-of-plane strain.
+No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between the Pt(111)-($8\times8$) surface structure, and changes in the out-of-plane strain.
 
 %%%%%%%%% Argon %%%%%%%
 
@@ -112,15 +112,15 @@ For both surfaces, the surface roughness and strain are lower than measured at f
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{@{}llll@{}}
    \toprule
-   O2 & NH3 & Pt(111) & Pt(100) \\
+   \ce{O2} (\unit{\milli\bar}) & \ce{NH3} (\unit{\milli\bar}) & Pt(111) & Pt(100) \\
    \midrule
    0  & 0 & No oxide layer / no reconstruction                            & No oxide layer / no reconstruction\\
-   80 & 0 & Two hexagonal rotated Pt(111)-p(6x6)-R\ang{\pm8.8}            & Epitaxial Pt(100)-p(2x2)-R\ang{0} \\
+   80 & 0 & Two hexagonal rotated Pt(111)-($6\times6$)-R\ang{\pm8.8}            & Epitaxial Pt(100)-($2\times2$) \\
     &    & superstructures (monolayer)                                    & structure (bulk \ce{Pt3O4}),      \\
-    &    & After \qty{9}{\hour}\qty{30}{\minute}: Pt(111)-p(8x8)-R\ang{0} & and signals shifted in H or K     \\
+    &    & After \qty{9}{\hour}\qty{30}{\minute}: Pt(111)-($8\times8$) & and signals shifted in H or K     \\
     &    & superstructure (multilayer)                                    & (monolayer)                       \\
    \midrule
-   80 & 10 & No oxide layer / no reconstruction                           & Pt(100)-p(10x10)-R\ang{0} reconstruction\\
+   80 & 10 & No oxide layer / no reconstruction                           & Pt(100)-($10\times10$) reconstruction\\
     &    & Weak signals in O 1s                                           & (multilayer)                      \\
     &    &                                                                & and signals shifted in H or K     \\
     &    &                                                                & (monolayer)                       \\
@@ -145,11 +145,11 @@ For both surfaces, the surface roughness and strain are lower than measured at f
 
 The different structures observed during this experiment are resumed in tab. \ref{tab:RecapSXRD}.
 There is no apparent role of surface and bulk oxides on the Pt(111) surface, as the structures growing under high oxygen pressure have been removed directly during the reaction.
-Pt(111)-p(8x8)-R\ang{0} and Pt(111)-p(6x6)-R\ang{\pm 8.8} cannot be linked to an increase or decrease of the catalytic activity, and thus do not seem to take part in the reaction mechanism.
+Pt(111)-($8\times8$) and Pt(111)-($6\times6$)-R\ang{\pm 8.8} cannot be linked to an increase or decrease of the catalytic activity, and thus do not seem to take part in the reaction mechanism.
 
-\ce{Pt_3O_4}, observed here in the Pt(100)-p(2x2)-R\ang{0} arrangement, has proven to be a source of oxygen atoms sustaining the catalytic oxygenation of \ce{CO} \textit{via} a Mars Van Krevelen mechanism \parencite{Seriani2006, Seriani2008}.
+\ce{Pt_3O_4}, observed here in the Pt(100)-($2\times2$) arrangement, has proven to be a source of oxygen atoms sustaining the catalytic oxygenation of \ce{CO} \textit{via} a Mars Van Krevelen mechanism \parencite{Seriani2006, Seriani2008}.
 In the current experiment, a second structure possibly related to \ce{Pt_3O_4} was measured.
-When under reacting conditions favouring \ce{NO}, which is the desired product for the Ostwald process, the in-plane peaks related to both structures were still measured, but being part of a Pt(100)-p(10x10)-R\ang{0} reconstruction.
+When under reacting conditions favouring \ce{NO}, which is the desired product for the Ostwald process, the in-plane peaks related to both structures were still measured, but being part of a Pt(100)-($10\times10$) reconstruction.
 The presence of bulk \ce{Pt_3O_4} is clearly ruled out.
 Nevertheless, it is possible that the reconstruction is due to the interaction of surface \ce{Pt_3O_4} with ammonia, resulting in an increased selectivity towards \ce{NO}.
 Reducing the oxygen to ammonia ratio is linked to the reconstruction removal, the stopping of \ce{NO} production, as well as the removal of the adsorbed oxygen peak in the O 1s level.
