--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -41,21 +41,21 @@ Two different oxygen to ammonia ratios are used after surface oxidation, by firs
 The XPS experiment was performed with the same ammonia to oxygen ratios, but at lower partial pressures (approximately \qty{10}{\percent} regarding the SXRD experiment).
 
 The oxidation of both surfaces is first discussed.
-Bulk \ce{Pt_3O_4} was identified on Pt(100), of mean thickness equal to \qty{16}{\angstrom} (\textit{i.e.} 3 unit cells thick).
+Bulk \ce{Pt_3O_4} was identified on Pt(100), in a Pt(100)-($2\times2$) arrangement of mean thickness equal to \qty{16}{\angstrom} (\textit{i.e.} 3 unit cells thick).
 Signals shifted in reciprocal space in comparison to the \ce{Pt_3O_4} peaks are also measured.
 Both the \ce{Pt_3O_4} and shifted peaks were measured \qty{1}{\hour} after the introduction of oxygen, but could not be detected under a reduced oxygen atmosphere (\qty{5}{\milli\bar}), even after several hours.
 Transient signals are measured instead, underlying the importance of the oxygen pressure in the surface oxidation.
 Bulk \ce{Pt3O4} was not observed on Pt(100).
-Nevertheless, a Pt(111)-(8x8)-R\ang{0} commensurate superstructure was clearly identified after \qty{9}{\hour}\qty{30}{\minute} of elapsed time under high oxygen atmosphere, and after \qty{23}{\hour}\qty{30}{\minute} under reduced oxygen atmosphere.
+Nevertheless, a Pt(111)-($8\times8$) commensurate superstructure was clearly identified after \qty{9}{\hour}\qty{30}{\minute} of elapsed time under high oxygen atmosphere, and after \qty{23}{\hour}\qty{30}{\minute} under reduced oxygen atmosphere.
 From the intensity distribution of the related out-of-plane signals, this structure was determined to be a few layers thick.
-Additional in-plane signals are also detected as soon as oxygen is introduced in the reactor, at both pressures, linked to a Pt(111)-p(6x6)-R\ang{\pm 8.8} structure.
-The intensity of those signals decreases once the Pt(111)-(8x8)-R\ang{0} structure is present, which supports a precursor link between both structures.
-% Moreover, when describing the signals with the Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} matrix, which results in a real space angle of \ang{137.4}, a second-order signal is shared.
+Additional in-plane signals are also detected as soon as oxygen is introduced in the reactor, at both pressures, linked to a Pt(111)-($6\times6$)-R\ang{\pm 8.8} structure.
+The intensity of those signals decreases once the Pt(111)-($8\times8$) structure is present, which supports a precursor link between both structures.
+% Moreover, when describing the signals with the Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$ matrix, which results in a real space angle of \ang{137.4}, a second-order signal is shared.
 Signals measured in the XPS O 1s level at reduced oxygen atmosphere and attributed to surface oxygen species are more important for Pt(100) than Pt(111), showing that Pt(100) surface is more readily oxidised than Pt(111).
 Oxidation of Pt(111) and Pt(100) was linked to increased surface roughness, and to compressive out-of-plane strain with respect to inert atmosphere for Pt(111).
 
 Different behaviours were measured on both surfaces during reacting conditions.
-Under high \ce{O_2}/\ce{NH_3} ratio, which favours the production of \ce{NO}, surface oxides are directly removed from Pt(111), but reconstruct with a p(10x10) arrangement on Pt(100).
+Under high \ce{O_2}/\ce{NH_3} ratio, which favours the production of \ce{NO}, surface oxides are directly removed from Pt(111), but reconstruct with a (10x10) arrangement on Pt(100).
 Oxygen species signals in the O 1s level are weak for Pt(111), difficult to dissociate from the background, whereas peaks are clearly detected for Pt(100).
 The difference in surface oxygen presence is already observed during previous surface oxidation.
 The reconstruction of the Pt(100) surface is linked to the persisting presence of surface oxygen species during ammonia oxidation, thereby differing from the Pt(111) surface.
@@ -114,7 +114,7 @@ Closing the pressure gap can be achieved for SXRD and BCDI by designing reactors
 Future experiments must move towards industrial condition to be relevant, the importance of total pressure was demonstrated in this thesis with e.g. oxide formation on Pt(100) at \qty{80}{\milli\bar} and not at \qty{5}{\milli\bar}.
 Simpler reaction cycles (e.g. by reducing the amount of \ce{O2}/\ce{NH3} ratios) will also help reduce the complexity of the data analysis.
 A future reaction cycle is proposed.
-First exposing the sample to increased oxygen pressure will reduce the time needed to detect potentially relevant oxides, as showcased here with the detection time of the Pt(111)-(8x8)-R\ang{0} structure, divided by \num{2.5} under \qty{80}{\milli\bar} of oxygen compared to \qty{5}{\milli\bar}.
+First exposing the sample to increased oxygen pressure will reduce the time needed to detect potentially relevant oxides, as showcased here with the detection time of the Pt(111)-($8\times8$) structure, divided by \num{2.5} under \qty{80}{\milli\bar} of oxygen compared to \qty{5}{\milli\bar}.
 A significant thickness of those platinum oxides could also be sufficient to be detected during BCDI experiments, especially now that the corresponding interplanar spacings are clearly determined.
 Their impact of the facet strain in BCDI could then be determined by reconstructing the 3D strain tensor.
 Higher oxygen pressure may reveal a role of platinum oxides during ammonia oxidation, invisible at lower pressure.
