--- a/Sections/6_Appendix/Pt111.tex
+++ b/Sections/6_Appendix/Pt111.tex
@@ -11,21 +11,21 @@
         \midrule
                                      &                  & 03h23 & 09h53 & \multicolumn{1}{|l}{00h34} & 04h03 & 08h00 & 15h57 & 22h56 & 24h08 & 25h43 & 26h36 & 27h28 \\
         \midrule % first struc split low O2
-        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $3.01 \pm 0.01$ & \yes  & \yes  & \multicolumn{1}{|l}{\yes}  & \yes  & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
+        Pt(111)-($6\times6$)-R\ang{\pm 8.8} & $3.01 \pm 0.01$ & \yes  & \yes  & \multicolumn{1}{|l}{\yes}  & \yes  & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
         \midrule % first struc not split high O2
-        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.92 \pm 0.03$ & \yes  & \yes  & \multicolumn{1}{|l}{\no}   & \no   & \no   & \no   & \no   & \no   &                              \yes & \no & \no \\
+        Pt(111)-($6\times6$)-R\ang{\pm 8.8} & $2.92 \pm 0.03$ & \yes  & \yes  & \multicolumn{1}{|l}{\no}   & \no   & \no   & \no   & \no   & \no   &                              \yes & \no & \no \\
         \midrule % first struc not split low O2
-        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.87 \pm 0.02$ & \no   & \no   & \multicolumn{1}{|l}{\yes}  & \yes  & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
+        Pt(111)-($6\times6$)-R\ang{\pm 8.8} & $2.87 \pm 0.02$ & \no   & \no   & \multicolumn{1}{|l}{\yes}  & \yes  & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
         \midrule % first struc split low O2
-        Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.79 \pm 0.07$ & \no   & \no   & \multicolumn{1}{|l}{\no}   & \no   & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
+        Pt(111)-($6\times6$)-R\ang{\pm 8.8} & $2.79 \pm 0.07$ & \no   & \no   & \multicolumn{1}{|l}{\no}   & \no   & \yes  & \yes  & \yes  & \yes  &                              \yes & \yes & \yes \\
         \midrule % hex struct
-        Pt(111)-p(8x8)-R\ang{0}       & $2.69 \pm 0.02$ & \no   & \yes  & \multicolumn{1}{|l}{\no}   & \no   & \no   & \no   & \no   & \yes  &                              \yes & \yes & \yes \\
+        Pt(111)-($8\times8$)       & $2.69 \pm 0.02$ & \no   & \yes  & \multicolumn{1}{|l}{\no}   & \no   & \no   & \no   & \no   & \yes  &                              \yes & \yes & \yes \\
         % \midrule % surf oxide
-        % Pt(111)-p(6x6)-R\ang{\pm 8.8} & $2.31 \pm 0.04$ & \no & \yes & \multicolumn{1}{|l}{\no} & \no & \no & \yes & \yes & \yes & \yes & \yes & \yes \\
+        % Pt(111)-($6\times6$)-R\ang{\pm 8.8} & $2.31 \pm 0.04$ & \no & \yes & \multicolumn{1}{|l}{\no} & \no & \no & \yes & \yes & \yes & \yes & \yes & \yes \\
         \midrule % first struc not split high O2
         % NRHS & $1.550 \pm 0.000$ & \yes & nv & \multicolumn{1}{|l}{nv} & \no & nv & nv & nv & nv & nv & nv & nv \\
         % \midrule % first struc not split low O2
-        Pt(111)-p(8x8)-R\ang{0}       & $1.53 \pm 0.00$ & \yes & nv     & \multicolumn{1}{|l}{nv}    & \yes  & nv    & nv    & nv & nv & nv & nv & nv \\
+        Pt(111)-($8\times8$)       & $1.53 \pm 0.00$ & \yes & nv     & \multicolumn{1}{|l}{nv}    & \yes  & nv    & nv    & nv & nv & nv & nv & nv \\
         % NRHS & $1.35 \pm 0.000$ & \no & nv & \multicolumn{1}{|l}{nv} & \yes & nv & nv & nv & nv & nv & nv & nv \\
         \bottomrule
     \end{tabular}
@@ -43,8 +43,8 @@
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/rotated_reconstruction_cells.pdf}
     % \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/reconstruction_42punto65.pdf}
     \caption{
-    Sketch of Pt(111) surface and Pt(111)-p(6x6)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
-    % Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0} structure (b).
+    Sketch of Pt(111) surface and Pt(111)-($6\times6$) structure unit cell vectors, in real and reciprocal space (a).
+    % Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$ structure (b).
     }
     \label{fig:Pt11180O2Structures}
 \end{figure}
@@ -53,7 +53,7 @@
     \centering
     \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/alphapto2_reconstruction_cell.pdf}
     \caption{
-    Sketch of Pt(111) surface and Pt(111)-p(26x26)-R\ang{0} structure unit cell vectors, in real and reciprocal space (a).
+    Sketch of Pt(111) surface and Pt(111)-($8\times8$) structure unit cell vectors, in real and reciprocal space (a).
     }
     \label{fig:Pt111AlphaPtO2}
 \end{figure}
