--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,22 @@ volume = {90},
 year = {2002}
 }
 
+@article{Leake2009,
+author = {Steven J. Leake and Marcus C. Newton and Ross Harder and Ian K. Robinson},
+journal = {Opt. Express},
+keywords = {Coherence; Phase retrieval; X-ray imaging; Nanorods; Partial coherence; Three dimensional imaging; Three dimensional reconstruction; X-ray diffraction; X-ray imaging},
+number = {18},
+pages = {15853--15859},
+publisher = {Optica Publishing Group},
+title = {Longitudinal coherence function in X-ray imaging of crystals},
+volume = {17},
+month = {Aug},
+year = {2009},
+url = {https://opg.optica.org/oe/abstract.cfm?URI=oe-17-18-15853},
+doi = {10.1364/OE.17.015853},
+abstract = {The longitudinal coherence function at the Advanced Photon Source beamline 34-ID-C has been measured by a novel method and the coherence length ($\xi$L) determined to be, $\xi$L $=$ 0.66 {\textpm} 0.02{\textmu}m. Three dimensional Coherent X-ray Diffraction (CXD) patterns were measured for multiple Bragg reflections from two Zinc Oxide (ZnO) nanorods with differing aspect ratios. The visibility of fringes corresponding to the 002 crystal direction for each reflection were found to be different and used to map the coherence function of the incident radiation. Partial coherence was found to be associated with amplitude `hot' spots in three dimensional reconstructions of the crystal structure.},
+}
+
 @Article{Singer2018,
 author={Singer, A. and Zhang, M. and Hy, S. and Cela, D. and Fang, C. and Wynn, T. A. and Qiu, B. and Xia, Y. and Liu, Z. and Ulvestad, A. and Hua, N. and Wingert, J. and Liu, H. and Sprung, M. and Zozulya, A. V. and Maxey, E. and Harder, R. and Meng, Y. S. and Shpyrko, O. G.},
 title={Nucleation of dislocations and their dynamics in layered oxide cathode materials during battery charging},
